// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Hero banner default renders correctly 1`] = `
<jest>
  <div
    class="bcl-banner hero"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner default renders correctly with title 1`] = `
<jest>
  <div
    class="bcl-banner hero"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        >
          Hero banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner default renders correctly with title and link 1`] = `
<jest>
  <div
    class="bcl-banner hero"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        />
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner image shade renders correctly 1`] = `
<jest>
  <div
    class="bcl-banner shade hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner image shade renders correctly with title 1`] = `
<jest>
  <div
    class="bcl-banner shade hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        >
          Hero banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner image text-block renders correctly 1`] = `
<jest>
  <div
    class="bcl-banner overlay hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner image text-block renders correctly with title 1`] = `
<jest>
  <div
    class="bcl-banner overlay hero"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        >
          Hero banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner primary renders correctly 1`] = `
<jest>
  <div
    class="bcl-banner hero"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Hero banner primary renders correctly with title 1`] = `
<jest>
  <div
    class="bcl-banner hero"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        >
          Hero banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner default renders correctly 1`] = `
<jest>
  <div
    class="bcl-banner"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner default renders correctly fixed height 1`] = `
<jest>
  <div
    class="bcl-banner fixed-height"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner default renders correctly full width 1`] = `
<jest>
  <div
    class="bcl-banner full-width"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner default renders correctly with content classes 1`] = `
<jest>
  <div
    class="bcl-banner"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content new-content-class"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner default renders correctly with title 1`] = `
<jest>
  <div
    class="bcl-banner"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        >
          Page banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner default renders correctly with title and link 1`] = `
<jest>
  <div
    class="bcl-banner"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        />
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner image shade renders correctly 1`] = `
<jest>
  <div
    class="bcl-banner shade"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner image shade renders correctly with title 1`] = `
<jest>
  <div
    class="bcl-banner shade"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        >
          Page banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner image text-block renders correctly 1`] = `
<jest>
  <div
    class="bcl-banner overlay"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner image text-block renders correctly with title 1`] = `
<jest>
  <div
    class="bcl-banner overlay"
  >
    <div
      class="bcl-banner__image"
      style="background-image:url(https://picsum.photos/id/154/1200/800)"
    />
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        >
          Page banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner primary renders correctly 1`] = `
<jest>
  <div
    class="bcl-banner"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <div
          class="mb-4 bcl-heading"
        >
          EU Budget for the future
        </div>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Page banner primary renders correctly with title 1`] = `
<jest>
  <div
    class="bcl-banner"
  >
    <div
      class="container"
    >
      <div
        class="bcl-banner__content"
      >
        <h6
          class="mb-4 bcl-heading"
        >
          Page banner test title
        </h6>
        <p
          class="mb-4"
        >
          Innovation, economy, environment and geopolitics
        </p>
        <a
          href="/example.html"
        >
          Subscribe
        </a>
      </div>
    </div>
  </div>
</jest>
`;
